--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "react-slick": "^0.30.2"
+    "react-slick": "^0.30.2",
+    "stripe": "^16.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
