--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.1",
     "axios": "^1.7.2",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
